# visual-mic-cplusplus

./: .gitignore  CMakeLists.txt  README.md  benchmark_threads.sh  test.sh
include/: frame_loader.h  math_ops.h  signal_processing.h  sound_from_video.h  steerable_pyramid.h  utils.h
scripts/: demo.sh  extract_frames.sh
src/: frame_loader.cpp  main.cpp  math_ops.cpp  signal_processing.cpp  sound_from_video.cpp  steerable_pyramid.cpp  utils.cpp
